--- a/templates/page.html
+++ b/templates/page.html
@@ -13,7 +13,14 @@
 <main>
     <h1>{{ page.title }}</h1>
     {% if page.date %}
-    <p class="secondary">{{ page.date | date(format="%-d %B, %Y") }}</p>
+        {% if page.updated %}
+            <p class="secondary">
+            {{ page.date | date(format="%-d %B, %Y") }}
+            (Updated on {{ page.updated | date(format="%-d %B, %Y") }})
+	    </p>
+        {% else %}
+            <p class="secondary">{{ page.date | date(format="%-d %B, %Y") }}</p>
+        {% endif %}
     {% endif %}
     <div class="space"></div>
     {{ page.content | safe }}
