--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import "fonts";
 @import "theme";
 
 html, body {
@@ -6,10 +7,10 @@ html, body {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14pt;
+    font-family: Inter, Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
 
-    line-height: 1.3em;
+    line-height: 1.54em;
 
     padding: 5em 25%;
 }
@@ -34,6 +35,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.25;
+    font-weight: 600;
 }
 
 img {
