--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import "modern-normalize";
 @import "fonts";
 @import "theme";
 
@@ -7,9 +8,8 @@ html, body {
 }
 
 body {
-    font-family: Inter, Arial, Helvetica, sans-serif;
+    font-family: Inter, system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";;
     font-size: 1.2rem;
-
     line-height: 1.54em;
 
     padding: 5em 25%;
